name:                tdlh
version:             0.1.0.0
synopsis:            To do list, in Haskell
description:         Read synopsis
homepage:            https://github.com/kendricktan/tdlh#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          kendrcktan0814@gmail.com
copyright:           2017 Kendrick Tan
category:            Linux-x86_64
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tdlh-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , tdlh
                     , ansi-terminal
  default-language:    Haskell2010

test-suite tdlh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tdlh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kendricktan/tdlh
